<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/searchFragmentRoot"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/otpLightGreen"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/otp"
            android:textColor="#fff"
            android:layout_marginEnd="4dp"
            android:textSize="24sp"
            android:textStyle="bold|italic" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/smartatm"
            android:textColor="#fff"
            android:textSize="20sp"
            android:textStyle="italic" />

    </androidx.appcompat.widget.Toolbar>

    <View
        android:id="@+id/view"
        android:layout_width="0dp"
        android:layout_height="128dp"
        android:background="#cceeeeee"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/view">

        <EditText
            android:id="@+id/startPlaceInput"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_weight="0.75"
            android:drawableStart="@drawable/ic_add_location"
            android:drawablePadding="10dp"
            android:hint="@string/actual_position"
            android:inputType="text" />

        <CheckBox
            android:id="@+id/isDepositCheckBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"
            android:text="@string/deposit" />

    </LinearLayout>

    <TextView
        android:id="@+id/startTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="16dp"
        android:drawableStart="@drawable/ic_clock"
        android:drawablePadding="10dp"
        android:gravity="center"
        android:maxLines="2"
        android:text="Start: Now"
        app:layout_constraintStart_toStartOf="@+id/linearLayout"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        tools:text="Start:now" />

    <Button
        android:id="@+id/searchButton"
        android:layout_width="wrap_content"
        android:layout_height="36dp"
        android:background="@drawable/button_background"
        android:drawableEnd="@drawable/ic_arrow_right"
        android:drawablePadding="-35dp"
        android:paddingStart="0dp"
        android:paddingEnd="8dp"
        android:text="@string/go"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="@+id/startTime"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout"
        app:layout_constraintTop_toTopOf="@+id/startTime" />

    <FrameLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:elevation="-1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <include layout="@layout/fragment_maps" />

        <View
            android:id="@+id/mapLoadingCover"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#aa777777" />

        <ProgressBar
            android:id="@+id/mapLoadingProgressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />

    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
